# rust-templates

./: Cargo.toml  README.md
bevy-template/: .gitignore  Cargo.toml  DuckMan.code-workspace  README.md  Trunk.toml  index.html  linux-release.sh  macos-release.sh  main.scss  release.sh  windows-release.sh
bevy-template/.cargo/: config.toml
bevy-template/src/: lib.rs  main.rs
coolio/src/: main.rs
src/: main.rs
tracing/: .gitignore  Cargo.toml
tracing/.cargo/: config.toml
tracing/src/: lib.rs  main.rs
trunk-leptos/: Cargo.toml  index.html
trunk-leptos/src/: app.rs  lib.rs  main.rs
