[package]
name = "duck-man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_editor_pls = "0.4.0"
bevy_egui = "0.20.3"
bevy_fly_camera = "0.10.0"
bevy_mod_picking = { version = "0.13.0", features = ["backend_rapier"] }
bevy_rapier3d = { version = "0.21.0", features = ["debug-render-3d", "simd-nightly"] }
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["time"] }

[dependencies.bevy]
# path = "../bevy"
version = "0.10.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.9", features = ["js"] }
tracing-web = "0.1.2"
console_error_panic_hook = "0.1.7"
