[package]
name = "example-name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
tracing = "0.1.37"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-web = "0.1.2"
getrandom = { version = "0.2.9", features = ["js"] }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
